--- a/experience.html
+++ b/experience.html
@@ -72,40 +72,67 @@
             <li>
                 <strong>LLMs AI Agent,</strong> Outlier (Remote) <em>(Since January 2024)</em><br><br>
 
-                Provides detailed human feedback on language learning models (LLMs), enhancing AI systems by
-                identifying errors and offering corrections.
-                Contributed to the models' understanding and performance improvements through comprehensive
-                evaluations.
-
+                Provides detailed human feedback on language learning models (LLMs), enhancing AI systems by identifying
+                errors and offering corrections to improve language processing capabilities.<br>
+                Engages in comprehensive evaluations that assess the models' performance, focusing on their
+                understanding of grammar, vocabulary, and contextual relevance.<br>
+                Analyzes output patterns and inconsistencies, delivering actionable insights that inform model updates
+                and refinements.<br>
+                Contributes to the models' understanding and performance/alignments improvements through rigorous
+                assessments, ensuring that the AI meets the needs of diverse users.<br>
+                Collaborates with a multidisciplinary team to implement feedback effectively, participating in
+                discussions to develop strategies for enhancing human-AI interactions.<br>
+                Plays a key role in shaping the future of language learning technologies by facilitating continuous
+                improvement, ultimately driving better educational outcomes for learners.<br>
             </li>
 
             <li>
                 <strong>Logistics Coordinator,</strong> Logistics Coordinator, Paris 2024 Olympic Games (Paris)
                 <em>(Summer 2024)</em><br><br>
 
-                Played a key role in the logistics and coordination team to ensure smooth operations for the
-                event.
-                Managed resources efficiently, contributing to the overall success of the Olympic Games.
-
+                Assigned to the logistics and coordination team for the Paris 2024 Olympic Games, primarily responsible
+                for ensuring security and access control at various event venues.<br>
+                Acted as a doorguard, monitoring entry points to ensure that only authorized personnel and participants
+                gained access to restricted areas, thereby maintaining a secure environment.<br>
+                Conducted thorough checks of identification and credentials, effectively managing the flow of attendees
+                and ensuring compliance with safety regulations.<br>
+                Collaborated with security personnel to implement and uphold safety protocols, contributing to the
+                overall safety and success of the event.<br>
+                Assisted in coordinating logistics related to the movement of athletes, staff, and materials between
+                venues, ensuring that all operations were executed smoothly and efficiently.<br>
+                Engaged in problem-solving to address any access issues, demonstrating the ability to adapt quickly to
+                changing circumstances while maintaining a professional demeanor.<br>
             </li>
 
             <li>
                 <strong>Private Tutor and Esports Coach,</strong> <em>(Summer 2022 & 2023)</em><br><br>
 
-                Delivered personalized tutoring sessions in French and English, adapting to various skill
-                levels.
-                Coached 10 students in esports, with skills varying from beginners to advanced, improving their
-                understanding and performance in competitive
-                gaming.
+                Provided personalized tutoring sessions in French and English, effectively adapting teaching
+                methodologies to accommodate various skill levels in subjects such as Mathematics and Physics.<br>
+                Developed tailored lesson plans that focused on individual student needs, promoting engagement and
+                mastery of complex concepts.<br>
+                Coached a diverse group of 10 students in esports, emphasizing skill development, strategic thinking,
+                and teamwork in competitive gaming environments.<br>
+                Fostered a positive and motivating learning atmosphere, encouraging students to set and achieve academic
+                and personal goals.<br>
+                Evaluated student progress regularly, providing constructive feedback to enhance their learning
+                experiences and outcomes.<br>
 
             </li>
 
             <li>
                 <strong>Shelf-Stacker/Cashier,</strong> Auchan (Paris) <em>(Summer 2020 & 2021)</em><br><br>
 
-                Maintained inventory and supported efficient checkout processes to contribute to overall store
-                operations.
-                Ensured customer satisfaction through effective communication and service.
+                Engaged in inventory management and customer service as a shelf-stacker and cashier at Auchan, one of
+                the largest retail chains in France.<br>
+                Maintained stock levels by organizing merchandise and ensuring shelves were well-displayed, enhancing
+                the shopping experience for customers.<br>
+                Assisted in the checkout process, efficiently handling transactions and addressing customer inquiries to
+                provide high-quality service.<br>
+                Developed strong communication and interpersonal skills while interacting with a diverse customer base,
+                contributing to positive shopping experiences.<br>
+                Collaborated with team members to ensure the store operated smoothly, participating in team meetings to
+                discuss strategies for improving customer service and store performance.<br>
 
             </li>
 
