--- a/projects.html
+++ b/projects.html
@@ -116,7 +116,8 @@
             <li>
                 <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
                     BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB)<br>
-                Built a comprehensive hand movement recognition system during an advanced HCI workshop at Tianjin
+                Built a comprehensive hand movement recognition system (accuracy of 98%) during an advanced BCI workshop
+                at Tianjin
                 University, led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
@@ -142,7 +143,8 @@
                     &nbsp&nbsp&nbsp&nbsp <br>
                     Results:<br>
                     Successfully developed a system capable of recognizing and reproducing complex hand movements in
-                    real-time, demonstrating practical applications in human-computer interaction and gesture control
+                    real-time with an accuracy of 98%, demonstrating practical applications in human-computer
+                    interaction and gesture control
                     systems.
                 </div>
 
