--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I am an engineering student.</h3>
             <p>As a student of engineering and medicine, my journey is deeply rooted in the intersection of
-                neuroscience and technology. Focusing on medical engineering, I am driven by a passion for software
-                development and artificial intelligence, particularly in the realms of brain-computer interfaces,
-                machine learning, and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to
-                explore data analysis, signal processing, and AI-driven solutions.<br> Currently studying computer
+                neuroscience and technology. Focusing on medical engineering, I am driven by a passion for machine
+                learning and artificial intelligence, particularly in the realms of machine learning, brain-computer
+                interfaces,
+                and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to
+                explore data analysis, signal processing, and AI-driven solutions, using different methods to achive the
+                best results.<br> Currently studying computer
                 science and machine learning at Tianjin University, I find inspiration in collaborative environments
-                that nurture creativity and challenge my problem-solving abilities. <br> Beyond academics, my love for
+                that nurture creativity and challenge my problem-solving abilities. <br> <br>Beyond academics, my love
+                for
                 sports, science, music, and cooking shapes a balanced lifestyle. Curiosity fuels my ambitions as I
                 continuously seek new challenges to deepen my understanding and contribute to the fusion of technology
                 and medicine in advancing neuroengineering innovations.
