--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
         <div class="home-content">
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I am an engineering student.</h3>
-            <p>As a student of engineering and medicine, my journey is deeply rooted in the intersection of
-                neuroscience and technology. Focusing on medical engineering, I am driven by a passion for machine
-                learning and artificial intelligence, particularly in the realms of machine learning, brain-computer
-                interfaces,
-                and neuroengineering. My work has spanned projects using Python, MATLAB, and C++ to
-                explore data analysis, signal processing, and AI-driven solutions, using different methods to achive the
-                best results.<br> Currently studying computer
-                science and machine learning at Tianjin University, I find inspiration in collaborative environments
-                that nurture creativity and challenge my problem-solving abilities. <br> <br>Beyond academics, my love
+            <p>As a student of engineering and medicine, my journey is deeply rooted at the intersection of these
+                fields. Focusing on machine learning and medical engineering, I am driven by a passion for exploring the
+                brain, neuroscience, and artificial intelligence. This passion has led me into the realms of
+                brain-computer interfaces and neuro-engineering, where I apply my skills through various projects using
+                Python, MATLAB, and C++ to explore the brain, the body and the world using machine intelligence,
+                healthcare analytics, and Deep Learning to achieve the desired results.<br>
+                Currently studying computer science, machine learning, and algorithms at Tianjin University,
+                I find inspiration in collaborative environments that not only nurture creativity but also actively
+                challenge my problem-solving abilities. Engaging with diverse teams allows me to approach complex
+                challenges from multiple perspectives, fostering innovation and enhancing my technical skills. <br>
+                <br>Beyond academics, my love
                 for
                 sports, science, music, and cooking shapes a balanced lifestyle. Curiosity fuels my ambitions as I
                 continuously seek new challenges to deepen my understanding and contribute to the fusion of technology
