--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I am an engineering student.</h3>
             <p>As a student of engineering and medicine, my journey is deeply rooted at the intersection of these
-                fields. Focusing on machine learning and medical engineering, I am driven by a passion for exploring the
+                fields.<br> Focusing on machine learning and medical engineering, I am driven by a passion for exploring the
                 brain, neuroscience, and artificial intelligence. This passion has led me into the realms of
                 brain-computer interfaces and neuro-engineering, where I apply my skills through various projects using
                 Python, MATLAB, and C++ to explore the brain, the body and the world using machine intelligence,
