--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="home-content">
             <h1>Hi, I'm <span>Alexandre CARMINOT</span></h1>
             <h3 class="typing-text">I am an engineering student.</h3>
-            <p>As a student of engineering and medicine, my journey is deeply rooted at the intersection of these
-                fields.<br> Focusing on machine learning and medical engineering, I am driven by a passion for exploring the
-                brain, neuroscience, and artificial intelligence. This passion has led me into the realms of
+            <p>As a student of engineering and medicine, my journey is deeply rooted in the intersection of these
+                fields.<br> Focusing on machine learning and medical engineering, I am driven by a passion for exploring
+                the brain, neuroscience, and artificial intelligence. This passion has led me into the realms of
                 brain-computer interfaces and neuro-engineering, where I apply my skills through various projects using
                 Python, MATLAB, and C++ to explore the brain, the body and the world using machine intelligence,
                 healthcare analytics, and Deep Learning to achieve the desired results.<br>
@@ -41,11 +41,9 @@
                 I find inspiration in collaborative environments that not only nurture creativity but also actively
                 challenge my problem-solving abilities. Engaging with diverse teams allows me to approach complex
                 challenges from multiple perspectives, fostering innovation and enhancing my technical skills. <br>
-                <br>Beyond academics, my love
-                for
-                sports, science, music, and cooking shapes a balanced lifestyle. Curiosity fuels my ambitions as I
-                continuously seek new challenges to deepen my understanding and contribute to the fusion of technology
-                and medicine in advancing neuroengineering innovations.
+                <br>Beyond academics, my love for sports, science, music, and cooking shapes a balanced lifestyle.
+                Curiosity fuels my ambitions as I continuously seek new challenges to deepen my understanding and
+                contribute to the fusion of technology and medicine in advancing neuroengineering innovations.
             </p>
             <div class="social-icons">
                 <a href="mailto:alexandre.carminot@outlook.com"><i class="fa-brands fa-at"></i></a>
