--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,9 @@
             </li>
             <li>
                 <strong onclick="openModal(['assets/hand2.jpg','assets/hand3.png','assets/hand.jpg'])">
-                    BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB)<br>
+                    BCI WorkShop - Tianjin University - Hand Movement Recognition 👁</strong> (MATLAB)
+                <a href="https://github.com/Alex-Irae/Hand_Movement_Recognition" target="_blank">[View on
+                    GitHub]</a><br><br>
                 Built a comprehensive hand movement recognition system (accuracy of 98%) during an advanced BCI workshop
                 at Tianjin
                 University, led by Dr. Uriel and Dr. Tareq. The project combined hardware and software components:<br>
