--- a/projects.html
+++ b/projects.html
@@ -98,9 +98,9 @@
             <li>
                 <strong>
                     Brain-Computer Interface Simulator</strong> (Python) - In Progress -
-                <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">[View on GitHub]</a><br>
-                Software-based BCI simulator that mimics the processing of EEG signals and allows users to control
-                virtual applications.<br>
+                <a href="https://github.com/Alex-Irae/BCI_SIM" target="_blank">[View on GitHub]</a><br><br>
+                Architecting a Brain-Computer Interface simulator that processes and interprets
+                multimodal neurophysiological signals (EEG/MEG) for real-time virtual control applications<br>
                 &nbsp&nbsp&nbsp&nbsp<br>
                 <div class="description" style="display: none;">
                     Project Objectives:<br>
@@ -126,7 +126,7 @@
                     Hardware Implementation:<br>
                     &nbsp&nbsp&nbsp&nbsp- Designed data collection system using Arduino Mega 2560, extension gauges, and
                     accelerometers<br>
-                    &nbsp&nbsp &nbsp&nbsp- Created a sensor-equipped glove to capture precise finger movements and
+                    &nbsp&nbsp&nbsp&nbsp- Created a sensor-equipped glove to capture precise finger movements and
                     orientations<br>
                     &nbsp&nbsp&nbsp&nbsp- Integrated servo motors for movement reproduction<br>&nbsp&nbsp&nbsp&nbsp <br>
 
@@ -152,23 +152,42 @@
 
                 <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
-
             <li>
                 <strong>
-                    AI Text Summarization Project </strong> (Python) - In Progess - <br>
-                Currently developing an AI system to summarize texts using PyTorch and Tensorflow to classify them
-                into different categories, based on FengShenBang LLM.
+                    Text Summarization Based on Deep Learning </strong> (Python) - In Progess - <br><br>
+                The "Text Summarization Based on Deep Learning" project aims to leverage advanced deep learning
+                techniques to generate concise summaries of selected texts from specific categories such as economics or
+                ecological protection. <br>
+                The project focuses on single-text summarization, allowing users to input a text
+                and receive a coherent summary while enabling manual control over the desired length of the output.<br><br>
+                <div class="description" style="display: none;">
+                    Key features :<br>
+
+                    &nbsp&nbsp&nbsp&nbsp- Input and Output: The system accepts a single piece of text and produces a
+                    summarized result, enhancing the efficiency of information consumption.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Text Categorization: Users can select texts from predefined categories,
+                    ensuring relevance and accuracy in summarization.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Length Control: Users can manually specify the approximate length of the
+                    summary, allowing for tailored outputs to fit various use cases.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Result Evaluation: The project incorporates evaluation metrics such as
+                    Distinct-n and Perplexity to assess the quality of the generated summaries, ensuring they meet
+                    established standards.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Model Repository: The project utilizes state-of-the-art open-source models,
+                    including Pegasus, available from various model repositories like Hugging Face and ModelScope.<br>
+                    &nbsp&nbsp&nbsp&nbsp- Parameter Tuning: A thorough understanding of the main parameters is included,
+                    allowing for effective tuning and optimization of model performance.
+                </div>
+
+                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
             </li>
             <li>
                 <strong onclick="openModal(['assets/ort.png','assets/ort2.png','assets/ort3.png',])">
                     Knee Orthosis Development 👁</strong> (Python, MATLAB)<br>
-                Knee Orthosis Development - Motion Analysis & Rehabilitation<br>
-                &nbsp&nbsp&nbsp&nbsp<br>
+                Knee Orthosis Development - Motion Analysis & Rehabilitation<br><br>
                 Developed an intelligent knee orthosis system for precise monitoring and analysis of rehabilitation.
                 This
                 project addressed the critical need for quantitative tracking of knee rehabilitation progress outside
-                clinical settings.<br>
-                &nbsp&nbsp&nbsp&nbsp <br>
+                clinical settings.<br> <br>
                 <div class="description" style="display: none;">
                     Technical Implementation:<br>
                     &nbsp&nbsp&nbsp&nbsp- Integrated Inertial Measurement Units (IMUs) into a knee orthosis for
@@ -221,7 +240,7 @@
             </li>
             <li>
                 <strong onclick=" openModal(['assets/fdf.png','assets/fdf2.png'])">
-                    Fire Propagation Simulation 👁</strong> (Java)<br>
+                    Fire Propagation Simulation 👁</strong> (Java)<br><br>
                 Developed an interactive environmental simulation system to model fire spread dynamics across various
                 terrain types with real-time adjustable parameters.<br>
                 &nbsp&nbsp&nbsp&nbsp <br>
@@ -251,7 +270,7 @@
             </li>
             <li>
                 <strong onclick="openModal(['assets/rbt1.png'])">
-                    Robot Stress Test 👁</strong> (CATIA)<br>
+                    Robot Stress Test 👁</strong> (CATIA)<br><br>
                 Conducted stress testing on robotic designs to evaluate performance under load to evaluate its capacity
                 to perform various tasks in different environments.
                 Used CATIA v5 to model the robot and simulate the stress test.
