format and description

--- a/education.html
+++ b/education.html
@@ -56,8 +56,12 @@
         <br>
 
         <ul>
-            <li><strong>Master's in Medical Engineering,</strong> EPF Engineering School Paris (09/2023 - Present),<em>
+            <li><strong>Master's in Medical Engineering,</strong> EPF Engineering School Paris (09/2023 - Present)<br><em>
                     Expected graduation in June 2025</em> <br> <br>
+                Engineering curriculum with a healthcare specialization: integrating core engineering
+                principles, mathematics, programming, and machine learning with medical
+                technology, device design, and healthcare informatics.
+                <br><br>
                 <em>Skills learned:</em> Problem-solving, analytical and critical thinking,collaborative teamwork,
                 medical
                 engineering principles, programming for medical applications, medical device design.
@@ -79,7 +83,7 @@
             <li><strong>Bachelor in General Engineering,</strong> EPF Engineering School Paris (09/2019 - 06/2023)</li>
         </ul>
         <br>
-        <h2>Certifications</h2>
+        <h2>Specialization Courses & Certifications</h2>
         <br>
         <ul>
             <li><strong>Advanced Medical Neuroscience,</strong> Duke University -Online Course- (Fall 2024)<br>
@@ -90,7 +94,7 @@
                 Supervised Learning, Unsupervised Learning, Neural Networks, and Advanced Structured Machine Learning
                 Projects
             </li>
-            <li><strong>Advanced Machine Learning on Google Cloud Specialization,</strong> SGoogle -Online Course- (Fall
+            <li><strong>Advanced Machine Learning on Google Cloud Specialization,</strong> Google -Online Course- (Fall
                 2024)<br>
                 Advanced Machine Learning Engineering, Cloud compute, TensorFlow, Computer Vision and Natural Language
                 Processing
