--- a/skills.html
+++ b/skills.html
@@ -45,7 +45,7 @@
         <ul class="skills-list">
             <li>
                 <div class="skill-header">
-                    <strong>Python</strong>
+                    <strong>Python </strong>
                     <div class="progress-bar">
                         <div class="progress" style="width: 90%;"></div>
                     </div>
@@ -57,13 +57,16 @@
             </li>
             <li>
                 <div class="skill-header">
-                    <strong>HTML, CSS, and JavaScript (JS)</strong>
+                    <strong>TensorFlow</strong>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 75%;"></div>
+                        <div class="progress" style="width: 80%;"></div>
                     </div>
                 </div>
-                Knowledgeable in HTML, CSS, and JavaScript (JS) for structuring web content.<br>
-                <em>Application:</em> This portfolio was created from scratch using HTML, CSS, and JavaScript.
+                Proficient in TensorFlow for developing and training machine learning models, particularly in deep
+                learning applications.<br>
+                <em>Application: </em>Implemented various neural network architectures, including convolutional and
+                recurrent networks, to solve complex problems in image and signal processing, contributing to
+                advancements in brain-computer interface technologies.
             </li>
             <li>
                 <div class="skill-header">
@@ -79,42 +82,63 @@
                 <div class="skill-header">
                     <strong>C++</strong>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 50%;"></div>
+                        <div class="progress" style="width: 60%;"></div>
                     </div>
                 </div>
                 Familiar with C++ for performance-critical applications.<br>
-                <em>Application:</em> Applied C++ in neural network modeling and engineering tasks.
+                <em>Application:</em> Applied C++ in engineering tasks on arduino projects and simulations.
             </li>
             <li>
                 <div class="skill-header">
                     <strong>MATLAB</strong>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 50%;"></div>
+                        <div class="progress" style="width: 60%;"></div>
                     </div>
                 </div>
                 Expertise in MATLAB for modeling, data analysis, and signal processing.<br>
                 <em>Application:</em> Classified finger movements using MATLAB in medical engineering projects.
             </li>
+            <li>
+                <div class="skill-header">
+                    <strong>HTML, CSS, and JavaScript (JS)</strong>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 50%;"></div>
+                    </div>
+                </div>
+                Knowledgeable in HTML, CSS, and JavaScript (JS) for structuring web content.<br>
+                <em>Application:</em> This portfolio was created from scratch using HTML, CSS, and JavaScript.
+            </li>
+
         </ul>
         <br>
         <h2>Technical Skills</h2>
         <br>
         <ul>
+
+            <li><strong>AI and Machine Learning in programming:</strong> Skilled with multiple programming libraries
+                such as TensorFlow, Keras, PyTorch, SciKit-learn, Pandas, Seaborn, or MNE and various machine learning
+                models, including Deep Neural Networks, CNN, XGBoost, SVM, Random Forest and Computer Vision techniques.
+            </li>
+            <li><strong>Machine Learning:</strong> Proficient in supervised and unsupervised learning, neural networks,
+                and deep learning models for predictive analytics and pattern recognition as well as different types of
+                neural networks (CNN, RNN, LSTM, GAN)
+            </li>
             <li><strong>Data Analysis and Interpretation:</strong> Ability to process and analyze complex datasets to
                 draw meaningful conclusions.
             </li>
-            <li><strong>AI and Machine Learning:</strong> Skilled with multiple programming libraries - TensorFlow,
-                PyTorch, scikit-learn, pandas, MNE - <br> and various machine learning models, including Deep Neural
-                Networks, CNN, XGBoost, SVM, and Random Forest.
-            </li>
-            <li><strong>Containerization (Docker):</strong>
-                Able to set up, deploy, and manage
-                containerized applications to streamline development and deployment processes using Docker.</li>
+
+
             <li><strong>Problem-Solving and Critical Thinking:</strong> Skilled in identifying issues and generating
                 solutions efficiently.
             </li>
             <li><strong>Research and Information Gathering:</strong> Proficient in sourcing, analyzing, and synthesizing
                 relevant information to support informed decision-making.
+            </li>
+            <li><strong>Containerization & Collabboration (Docker & Git):</strong>
+                Able to set up, deploy, and manage containerized applications to streamline development and deployment
+                processes using Docker.<br>
+                Proficient in version control and collaborative development using Git.
+
             </li>
         </ul>
         <br>
@@ -128,10 +152,10 @@
                 <em>Application:</em> Utilized MATLAB to calculate knee flexion from visual cues during movement
                 analysis.
             </li>
-            <li><strong>Catia:</strong> Skilled in mechanical modeling with Catia. <br>  <em>Application:</em>
+            <li><strong>Catia:</strong> Skilled in mechanical modeling with Catia. <br> <em>Application:</em>
                 Designed
                 mechanical components for medical devices (knee orthosis.).</li>
-            <li><strong>Amesim:</strong> Familiar with Amesim for multi-domain system simulations. <br> 
+            <li><strong>Amesim:</strong> Familiar with Amesim for multi-domain system simulations. <br>
                 <em>Application:</em> Modeled fluid and mechanical dynamics systems in engineering coursework.
             </li>
         </ul>
