--- a/projects.html
+++ b/projects.html
@@ -154,12 +154,51 @@
             </li>
             <li>
                 <strong>
+                    Custom Neural Network Framework for Predictive Modeling </strong> (Python)
+                <a href="https://github.com/Alex-Irae/Artificial-neural-Network/tree/main" target="_blank">[View on
+                    GitHub]</a> <br>
+                Integrated in the disease prediction algorithm<br><br>
+                Designed and implemented a custom deep neural network framework from scratch, integrating advanced
+                activation functions (Sigmoid, ReLU, Swish, Softmax) and dropout for optimized learning. <br>
+                <br>
+                <div class="description" style="display: none;">
+                    The framework supports variable layers and hyperparameter adjustments, enabling diverse applications
+                    across complex prediction tasks. Key improvements included efficient backpropagation, loss function
+                    flexibility (MSE, MAE, Cross-Entropy), and streamlined training through batch processing, making the
+                    model robust for real-world, high-dimensional datasets.
+                    <br><br>
+
+                    Technical Implementation:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Developed multi-layer neural network with dynamic layer configuration,
+                    leveraging dropout and backpropagation for minimized error rates. <br>
+                    &nbsp&nbsp&nbsp&nbsp- Custom loss functions allow
+                    versatile problem-solving.<br>
+                    Research & Development: <br>
+                    &nbsp&nbsp&nbsp&nbsp- Conducted rigorous data validation, feature engineering, and hyperparameter
+                    tuning for optimal performance.<br>
+                    Key Features:<br>
+                    &nbsp&nbsp&nbsp&nbsp- Realized flexibility in activation and loss functions, achieving robust model
+                    performance suitable for classification and regression tasks.<br>
+                    Results: <br>
+                    &nbsp&nbsp&nbsp&nbsp- Validated against synthetic and real datasets, achieving high accuracy without
+                    overfitting.<br>
+                    Impact: <br>
+                    &nbsp&nbsp&nbsp&nbsp- Provides a foundation for adaptable and efficient predictive models,
+                    potentially enhancing
+                    capabilities in fields such as healthcare diagnostics, financial forecasting, and BCI research.<br>
+                </div>
+
+                <i class="fas fa-chevron-down arrow" onclick="toggleDescription(this)"></i>
+            </li>
+            <li>
+                <strong>
                     Text Summarization Based on Deep Learning </strong> (Python) - In Progess - <br><br>
                 The "Text Summarization Based on Deep Learning" project aims to leverage advanced deep learning
                 techniques to generate concise summaries of selected texts from specific categories such as economics or
                 ecological protection. <br>
                 The project focuses on single-text summarization, allowing users to input a text
-                and receive a coherent summary while enabling manual control over the desired length of the output.<br><br>
+                and receive a coherent summary while enabling manual control over the desired length of the
+                output.<br><br>
                 <div class="description" style="display: none;">
                     Key features :<br>
 
