--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 the brain, neuroscience, and artificial intelligence. This passion has led me into the realms of
                 brain-computer interfaces and neuro-engineering, where I apply my skills through various projects using
                 Python, MATLAB, and C++ to explore the brain, the body and the world using machine intelligence,
-                healthcare analytics, and Deep Learning to achieve the desired results.<br>
-                Currently studying computer science, machine learning, and algorithms at Tianjin University,
-                I find inspiration in collaborative environments that not only nurture creativity but also actively
+                healthcare analytics, and Deep Learning to achieve my goals.<br>
+                Currently studying computer science, machine learning, and algorithms at Tianjin University for the fall semester,
+                I thrive in collaborative environments that not only nurture creativity but also actively
                 challenge my problem-solving abilities. Engaging with diverse teams allows me to approach complex
                 challenges from multiple perspectives, fostering innovation and enhancing my technical skills. <br>
                 <br>Beyond academics, my love for sports, science, music, and cooking shapes a balanced lifestyle.
