--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
                 brain-computer interfaces and neuro-engineering, where I apply my skills through various projects using
                 Python, MATLAB, and C++ to explore the brain, the body and the world using machine intelligence,
                 healthcare analytics, and Deep Learning to achieve my goals.<br>
-                Currently studying computer science, machine learning, and algorithms at Tianjin University for the fall semester,
-                I thrive in collaborative environments that not only nurture creativity but also actively
+                Currently studying computer science, machine learning, at Tianjin University for the fall semester,
+                I am now focusing on the development of machine learning, algorithms and computer vision to further
+                enhance my future projects, increase precision, fidelity and accuracy.<br>
+                As a project leader, I thrive in collaborative environments that not only nurture creativity but also
+                actively
                 challenge my problem-solving abilities. Engaging with diverse teams allows me to approach complex
                 challenges from multiple perspectives, fostering innovation and enhancing my technical skills. <br>
                 <br>Beyond academics, my love for sports, science, music, and cooking shapes a balanced lifestyle.
